# project3.0

./: .env  .replit  README.md  backend-example.py  index.html  package-lock.json  package.json  pose_estimation_server.py  pyproject.toml  replit.md  simple_pose_server.py  start_pose_server.py
attached_assets/: Pasted-he-front-end-HTML-CSS-and-minimal-JavaScript-for-a-fitness-website-called-FitnessAI-based-on-th-1755931924452_1755931924453.txt
client/src/: App.tsx  index.css
client/src/components/: BMICalculator.tsx  BodyTypeResult.tsx  DietForm.tsx  DietPlan.tsx  FeaturesSection.tsx  FinalCTA.tsx  Footer.tsx  HeroSection.tsx  ImageUpload.tsx  LoadingSpinner.tsx  Navbar.tsx  WorkoutRecommendations.tsx  WorkoutTrainer.tsx
client/src/pages/: AIModels.tsx  Auth.tsx  Dashboard.tsx  Index.tsx
project2.0/: README.md  package-lock.json  package.json
project2.0/client/: index.html  package-lock.json  package.json  tailwind.config.js
project2.0/client/src/: App.tsx  index.css
project2.0/client/src/types/: index.ts
project2.0/server/: .env.example  index.js  package-lock.json  package.json
server/: index.ts
src/: App.tsx  index.css
src/components/: BodyTypeResult.tsx  HeroSection.tsx  Navbar.tsx
src/components/ui/: button.tsx
src/hooks/: useAuth.tsx
src/integrations/supabase/: client.ts
src/pages/: Auth.tsx  Dashboard.tsx  Index.tsx
supabase/: config.toml
supabase/migrations/: 20250821090345_4a262ecc-b2ab-4b53-b9c2-8aa35b449dfc.sql  20250821090417_a9b161f8-8035-40cd-a4ce-96c2b9e5c894.sql  20250822053033_ae3dc93c-b518-4f26-bc5a-6c8da562a581.sql
(+7 files in other folders)
