[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "eventlet>=0.40.2",
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "flask-socketio>=5.5.1",
    "mediapipe==0.10.9",
    "numpy==1.24.0",
    "opencv-python-headless==4.8.0.76",
    "python-socketio>=5.13.0",
]
